# GPU_Samples

Command/: Run NCSA GPU command.docx
HW1/: message.txt
HW1/DesignDoc/: Pseudocode.txt
HW1/HostFunctinos/: CMakeLists.txt  main.c
HW1/Submission/KeitaKatsumi_p1/: sgemm.cu
HW1/sgemm/: CMakeLists.txt  sgemm  sgemm.cu
HW2/DesignDoc/: PseudoCode.txt  sgemm2.cu
HW2/HostFunctions/: CMakeLists.txt  main.c
HW2/sgemm2/: CMakeLists.txt  sgemm2.cu  with_static_sgemm2.cu  with_static_thread_coarsening_sgemm2.cu
HW2/submit/KeitaKatsumi_p2/: sgemm2.cu
HW3/: convolution.cu
HW3/cuFiles/: convolution.cu
HW3/hw3/: Pseudocode.cu
SampleProjects/Device_query/: CMakeLists.txt  device-query.cu
SampleProjects/HelloWorld/: CMakeLists.txt  helloWorld.cu
SampleProjects/VecAdditionTimer/: CMakeLists.txt  main.cu
SampleProjects/colorToGray/: CMakeLists.txt  main.cu
SampleProjects/myCPUTimer/: myCPUTimer.cu
SampleProjects/vecAddKernel/: CMakeLists.txt  main.cu
